<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Clean MVVM Architecture</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="select_language">Select Language</string>
    <string name="cancel">Cancel</string>
</resources>